기본적인 css들 조금 수정했습니다

--- a/src/main/webapp/css/board_content.css
+++ b/src/main/webapp/css/board_content.css
@@ -8,8 +8,8 @@ div.brdDetail{
 	
 	width: 1400px;
 	display: block;
-	border-left: 5px dotted orange;
-  	border-right: 5px dotted orange;	
+	/* border-left: 5px dotted orange;
+  	border-right: 5px dotted orange;	 */
 	height: 100%;
 }
 
