--- a/src/main/webapp/css/boardlist.css
+++ b/src/main/webapp/css/boardlist.css
@@ -9,8 +9,8 @@
  
   position: relative;
   /* height: 140vh; */
-  border-left: 5px dotted orange;
-  border-right: 5px dotted orange;
+  /* border-left: 5px dotted orange;
+  border-right: 5px dotted orange; */
       
 }
 
