--- a/src/main/webapp/css/noticedetail.css
+++ b/src/main/webapp/css/noticedetail.css
@@ -6,8 +6,8 @@ div.ntcDetail{
 	
 	width: 1400px;
 	display: block;
-	border-left: 5px dotted orange;
-  	border-right: 5px dotted orange;	
+	/* border-left: 5px dotted orange;
+  	border-right: 5px dotted orange;	 */
 	height: 100%;
 }
 h1{
