--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -11,8 +11,8 @@
 .container{
    
   height: 100%;
-  border-left: 5px dotted orange;
-  border-right: 5px dotted orange;
+  /* border-left: 5px dotted orange;
+  border-right: 5px dotted orange; */
   width: 90%;
   margin: 0 auto;
   
