--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -121,5 +121,8 @@ div.container>div.ntc_list>div>ul>li span{
 
 div.container>div.ntc_list>div.notice_write_button{
 	margin-top:30px;
+
+}
+div.container>div.ntc_list>div.notice_write_button>label{
 	border:1px solid black;
 }
